fix(manifest): add required version key for HA loader (v0.1.2)

--- a/custom_components/mffr_tracker/manifest.json
+++ b/custom_components/mffr_tracker/manifest.json
@@ -4,6 +4,7 @@
   "documentation": "https://github.com/andressade/MFFR-Profit-Tracker",
   "issue_tracker": "https://github.com/andressade/MFFR-Profit-Tracker/issues",
   "codeowners": ["@andressade"],
+  "version": "0.1.2",
   "config_flow": true,
   "iot_class": "calculated",
   "requirements": [],
