--- a/examples/home_assistant/statistics_sensors.yaml
+++ b/examples/home_assistant/statistics_sensors.yaml
@@ -1,33 +1,32 @@
 template:
   - trigger:
       - platform: state
-        entity_id: sensor.mffr_slot_profit
+        entity_id: sensor.mffr_profit_tracker_slot_profit
     sensor:
       - name: "MFFR Slot Profit Last"
         unique_id: mffr_slot_profit_last
         unit_of_measurement: "€"
-        state: "{{ states('sensor.mffr_slot_profit') }}"
+        state: "{{ states('sensor.mffr_profit_tracker_slot_profit') }}"
 
 # Statistics-based rolling sums from slot profits
 sensor:
   - platform: statistics
     name: "MFFR Today Profit (sum)"
-    entity_id: sensor.mffr_slot_profit
+    entity_id: sensor.mffr_profit_tracker_slot_profit
     state_characteristic: sum
     max_age:
       hours: 24
 
   - platform: statistics
     name: "MFFR Week Profit (sum)"
-    entity_id: sensor.mffr_slot_profit
+    entity_id: sensor.mffr_profit_tracker_slot_profit
     state_characteristic: sum
     max_age:
       days: 7
 
   - platform: statistics
     name: "MFFR Month Profit (sum)"
-    entity_id: sensor.mffr_slot_profit
+    entity_id: sensor.mffr_profit_tracker_slot_profit
     state_characteristic: sum
     max_age:
       days: 30
-
