--- a/custom_components/mffr_tracker/manifest.json
+++ b/custom_components/mffr_tracker/manifest.json
@@ -9,5 +9,6 @@
   "iot_class": "calculated",
   "requirements": [],
   "dependencies": [],
-  "ha_version": "2023.12.0"
+  "ha_version": "2023.12.0",
+  "brand": "mffr_tracker"
 }
